--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "document-register-element": "1.8.1",
     "express": "^4.16.3",
+    "gh-pages": "^3.2.3",
     "rxjs": "^6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
